--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
             <artifactId>ezspec-report</artifactId>
             <version>LATEST</version>
         </dependency>
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.34</version>
+        <scope>compile</scope>
+      </dependency>
 
     </dependencies>
 
